--- a/EmployeeProjectTask.API/appsettings.json
+++ b/EmployeeProjectTask.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9V63D2F\\AYA;Database=Employee;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=Employee;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
